# mvm-capstone

./: .flake8  .gitignore  pyproject.toml  requirements.txt
config/: env_config.py
data/processed/: ready_data.feather
docs/: README.md
notebooks/: evaluating_engagement.ipynb  testing.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_actions.py  extract_donations.py  extract_main.py
src/load/: app.py  load.py
src/transform/: clean_report.py  combine_donations.py  create_scores.py  normalise_column.py  tags.py  transform.py
tests/unit_tests/: extract_test.py  transformation_test.py  transformation_tests.py
